# UIAutomation

./: .gitignore  README.md  pyproject.toml
scripts/: conftest.py  inspect_locators.py
src/: __init__.py
src/drivers/: __init__.py  ios_driver.py
src/pages/: base_page.py
src/pages/calendar/: __init__.py  calendar_home.py  calendar_onboarding.py  calendars_list.py  new_event.py
src/pages/settings/: __init__.py  display_settings.py  general_settings.py  settings_home.py  wifi_settings.py
src/utils/: __init__.py  app_launcher.py  appium_service.py  element_helpers.py  simulator_control.py  wait_helpers.py  wda_setup.py
tests/: __init__.py  conftest.py  test_calendar.py  test_debug_locators.py  test_environment_setup.py  test_locator_scripts.py  test_review_fixes.py  test_settings.py
